# obs-sinistralidade

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
src/core/: ans_discoverer.py  ans_downloader.py  base.py
src/ingestion/: demonstracoes_contabeis.py
src/utils/: logger.py
